# MCP-Model-Context-Protocol

./: COMPLETE_GUIDE.md  MCP_Guide.html  README.md  blog-script.js  blog-style.css  index.html  interactive_journey.html  main.py  pyproject.toml
client/: config.py  llm_provider.py  mcp_client.py
examples/: demo_walkthrough.py  interactive_client.py  test_demo.py
server/: finance_server.py  news_server.py  weather_server.py
